infra/development/network/nat_gateway.tf
resource "aws_eip" "this" {
  vpc = true
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.this.id
  subnet_id     = aws_subnet.public_1a.id

  tags = {
    Name = "dev"
  }
}
